# Open3D

./: .gitignore  CMakeLists.txt  NOTES.md
stitcher/: CMakeLists.txt  main.cpp
stitcher/src/: FastGlobalRegistration.cpp  FastGlobalRegistration.h  test_fgr.cpp  test_fgr.h
